--- a/onboard_2024_front/src/styles.scss
+++ b/onboard_2024_front/src/styles.scss
@@ -9,12 +9,7 @@
 
   --mdc-filled-text-field-container-color: #1a1c1c; // Default text color for text fields
   
-  background-color: mat.get-theme-color($light-theme, primary, 95);
-  --app-background-color: #ecf0ff;
-
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, sans-serif;
+  background-color: var(--sys-background);
 }
 
 .dark-theme {
@@ -23,8 +18,7 @@
 
   --mdc-filled-text-field-container-color: #e2e2e2; 
 
-  background-color: mat.get-theme-color($dark-theme, neutral, 10);
-  --app-background-color: #1b1b1e;
+  background-color: var(--sys-background);
 }
 
 html, body {
@@ -32,6 +26,7 @@ html, body {
   padding: 0;
   height: 100%;
   overflow: hidden;
+  font-family: Roboto, sans-serif;
 }
 
 // Override autofill color for text fields
@@ -40,4 +35,19 @@ mat-form-field:has(input:-webkit-autofill) {
     -webkit-background-clip: text;
     -webkit-text-fill-color: var(--mdc-filled-text-field-container-color);
   }
+}
+
+::-webkit-scrollbar {
+  border-radius: 5px;
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: none;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: none;
+  background-color: var(--sys-surface-container-highest);
 }
